# keychain-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MAINTENANCE.md  README.md  README_EN.md  TODOS.md  USAGE_AND_MAINTENANCE.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs
src/commands/: check.rs  load.rs  mod.rs  setup.rs  validate.rs
src/keychain/: mod.rs
src/rules/: mod.rs
test/: api_client.py
