[package]
name = "keychain_cli"
version = "0.1.0"
edition = "2021"
description = "Secure secret management for macOS - Keychain-based credential storage with Hook validation"
repository = "https://github.com/mason0510/keychain-cli"
homepage = "https://github.com/mason0510/keychain-cli"
documentation = "https://github.com/mason0510/keychain-cli#readme"
license = "MIT"
authors = ["Mason <mason0510@gmail.com>"]
keywords = ["keychain", "secrets", "security", "cli", "macos"]
categories = ["command-line-utilities", "authentication", "development-tools"]

[[bin]]
name = "keychain-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
security-framework = "2.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
dialoguer = "0.11"
dirs = "5.0"
shellexpand = "3.0"
